# cosctl

./: .gitignore  LICENSE  Makefile  README.md  build.sh  pyproject.toml
src/cosctl/: main.py
tests/: test_main.py
